--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -32,7 +32,7 @@
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label><br>
                   <i style="color:red"th:errors="*{password}"></i>
-                  <input th:field="*{password}" type="password" minlength="6" class="form-control" placeholder="Enter Password">
+                  <input th:field="*{password}" type="text" minlength="6" class="form-control" placeholder="Enter Password">
                 </div>
                <div class="form-group">
                   <label for="exampleInputPassword1">FullName</label><br>
@@ -75,12 +75,14 @@
                
                 <button class="btn btn-primary" disabled>Add</button>
                     <button formaction="/admin/user/update" class="btn btn-primary">Update</button>
+                    <button formaction="/admin/user/lock" class="btn btn-primary">Lock</button>
                      <button formaction="/admin/user/new?edit=false" class="btn btn-primary" >Reset</button>
                 </div>
                 <div th:unless="${edit} == true">
                     
                    <button class="btn btn-primary">Add</button>
                  <button formaction="/admin/user/update" class="btn btn-primary" disabled>Update</button>
+                 <button formaction="/admin/user/update" class="btn btn-primary" disabled>Lock</button>
                  <button formaction="/admin/user/new?edit=false" class="btn btn-primary">Reset</button>
                      
                 </div>
@@ -91,7 +93,7 @@
           </div>
   		<div class="box">
             <div class="box-header">
-              <h3 class="box-title">Hover Data Table</h3>
+              
                <h3 style="float:right;" class="box-title">
                <form th:action="@{/admin/user/find}" method="post">
                  
