--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
@@ -67,12 +67,12 @@
                                                                    <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
                                                               
                                                               
-                                                                       <div th:if="${HoLy.available} != true">
+                                                                       <div th:if="${HoLy.quantity} == 0">
 							 								<div class="product_action">
                                                                <a onclick="alert('Xin lỗi! Sản phẩm đã hết hàng.')" href="#"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
 																	</div>
-													                <div th:if="${HoLy.available} == true">
+													                <div th:if="${HoLy.quantity} != 0">
 																		 <div class="product_action">
                                               					          <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
