--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -68,11 +68,11 @@
                                                     <input name="qty" min="1" th:max="${product.quantity}" value="1" type="number">
                                                       
                                                       
-                                                               <div th:if="${product.available} != true">
+                                                               <div th:if="${product.quantity} == 0">
                                                                
 						  <button  onclick="alert('Sản phẩm đã hết!')" disabled> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
 							</div>
-													                <div th:if="${product.available} == true">
+													                <div th:if="${product.quantity} != 0">
 												  <button type="submit" onclick="alert('Đã thêm vào giỏ hàng!')"> <i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
 												           
            																		     </div> 
